Add lst-minute call
